# redfa

./: Cargo.toml
examples/: cli_example.rs  lexer.rs  test.rs
src/: derivatives.rs  dfa.rs  iter_set.rs  lib.rs  regex.rs  tests.rs
